--- a/mariadb.yaml
+++ b/mariadb.yaml
@@ -5,8 +5,9 @@ metadata:
   labels:
     app: mariadb
     type: database
+    env: acm
 spec:
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
