--- a/mariadb.yaml
+++ b/mariadb.yaml
@@ -7,6 +7,9 @@ metadata:
     type: database
     env: acm
 spec:
+  selector:
+    matchLabels:
+      app: mariadb
   replicas: 2
   template:
     metadata:
